fix: editar o crear la sede si no existe, solo admin